# sysy-compiler

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/backend/: CMakeLists.txt  kirt2asm.cpp  kirt2asm.h
src/frontend/: .gitignore  CMakeLists.txt  ast.cpp  ast.h  sysy.l  sysy.y
src/middleend/: CMakeLists.txt  ast2kirt.cpp  ast2kirt.h  kirt.cpp  kirt.h  kirt2strkir.cpp  kirt2strkir.h  kirt_utils.h  pass_collapse_arr.cpp  pass_collapse_arr.h  pass_fill_block_id_name.cpp  pass_fill_block_id_name.h  pass_fill_block_name.cpp  pass_fill_block_name.h  pass_remove_unreachable.cpp  pass_remove_unreachable.h  pass_repl_unasm.cpp  pass_repl_unasm.h
src/optim/: CMakeLists.txt  optim_dbs.cpp  optim_dbs.h  pass_block_fusion.cpp  pass_block_fusion.h  pass_calc_global_dbs.cpp  pass_calc_global_dbs.h  pass_idempotent_func_promotion.cpp  pass_idempotent_func_promotion.h  pass_optim_exp_op.cpp  pass_optim_exp_op.h  pass_scalar_promotion.cpp  pass_scalar_promotion.h  pass_unit_block_elim.cpp  pass_unit_block_elim.h
src/utils/: utils.h
test-programs/: temp.cpp
